--- a/src/BffGateway.WebApi/Resources/Messages.resx
+++ b/src/BffGateway.WebApi/Resources/Messages.resx
@@ -124,6 +124,9 @@
   <data name="PasswordRequired">
     <value>Password is required</value>
   </data>
+  <data name="PasswordPolicy">
+    <value>Password must be at least 8 characters and include uppercase, lowercase, and a digit.</value>
+  </data>
   <data name="AmountGreaterThanZero">
     <value>Amount must be greater than zero</value>
   </data>
